--- a/style.css
+++ b/style.css
@@ -1201,7 +1201,7 @@ footer {
 .level2 {
 	display: flex;
 	justify-content: space-between;
-	gap: 10px;
+	gap: 30px;
 	padding: 32px 0;
 	flex-wrap: wrap;
 }
@@ -1637,12 +1637,16 @@ aside {
 }
 
 @media (max-width: 500px) {
-	aside {
-		display: none;
+	.news_categories {
+		gap: 10px;
 	}
 
 	.news {
 		grid-template-columns: 1fr;
+	}
+
+	.news main {
+		grid-area: 3/1/3/1;
 	}
 }
 
@@ -3064,8 +3068,18 @@ aside {
 
 /* end proj item */
 
-#firstMeeting h2 {
+#apply h2 {
 	margin: 40px 0;
+	font-size: 32px;
+	word-break: normal;
+}
+
+.apply_back {
+	position: absolute;
+	left: 50%;
+	bottom: 100px;
+	width: 450px;
+	transform: translateX(-50%);
 }
 
 .fm_video iframe {
@@ -3080,11 +3094,11 @@ aside {
 	border-radius: 20px;
 	padding: 32px;
 	border: 1px solid #2fb14b;
+	line-height: 24px;
+	text-align: justify;
 }
 
 .fm_text p {
-	line-height: 24px;
-	text-align: justify;
 	color: #2e2e2ecc;
 }
 
@@ -3127,22 +3141,263 @@ aside {
 	stroke: #be252a;
 }
 
-.fm_grid_el a {
+.fm_grid_el a,
+.fm_text a {
 	color: #2fb14b;
 	transition: 0.2s;
 }
 
 .fm_grid_el a:hover,
-.fm_grid_el a:active {
+.fm_grid_el a:active,
+.fm_text a:hover,
+.fm_text a:active {
 	color: #be252a;
 }
 
 @media (max-width: 952px) {
-	#firstMeeting h2 {
+	.apply_back {
+		display: none;
+	}
+
+	#apply h2 {
 		font-size: 28px;
 	}
 	.fm_grid {
 		padding: 20px;
 		grid-template-columns: 1fr;
 	}
+
+	.fm_text {
+		padding: 20px;
+	}
+}
+
+.fm_text ol {
+	padding: 20px 0 0 20px;
+	list-style: upper-roman;
+	font-size: 14px;
+	color: #2e2e2ecc;
+}
+
+.fm_text li {
+	display: list-item;
+}
+
+.sc_red {
+	border: 1px solid #be252a;
+	background-color: #be252a08;
+	font-weight: 500;
+	position: relative;
+}
+
+.sc_red svg {
+	width: 80px;
+	position: absolute;
+	fill: #be252a;
+	opacity: 0.2;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/**/
+
+#finType {
+	padding: 127px 0 0 0;
+}
+
+#finType h2 {
+	margin: 64px 0 22px 0;
+	word-wrap: normal;
+}
+
+.fin_type_grid {
+	display: grid;
+	gap: 25px;
+	grid-template-columns: 1fr 1fr;
+}
+
+.fin_type_grid .ft_grid_el {
+	display: flex;
+	flex-direction: column;
+	text-align: justify;
+	gap: 20px;
+	line-height: 24px;
+}
+
+.fin_type_grid .ft_grid_el h3,
+.fin_type_grid .ft_grid_el h4 {
+	color: #2fb14b;
+}
+
+.fin_type_grid .ft_grid_el p {
+	color: #2e2e2ecc;
+	font-size: 14px;
+}
+
+.fin_type_grid .ft_grid_el ul {
+	padding: 0 0 0 20px;
+	list-style: square;
+}
+
+.fin_type_grid .ft_grid_el li {
+	color: #2e2e2ecc;
+	display: list-item;
+}
+
+.fin_type_grid .ft_grid_last {
+	grid-area: 7/1/8/3;
+}
+
+.fin_type_grid .ft_leasing_last {
+	grid-area: 8/1/9/3;
+}
+
+.ft_calc {
+	grid-area: 1/1/2/3;
+}
+
+#calculator {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+#calculator input {
+	border: 1px solid #2fb14b;
+	width: 100px;
+}
+
+#calculator select {
+	height: 40px;
+	border: 1px solid #2fb14b;
+	border-radius: 8px;
+	outline: none;
+}
+
+#calculator button {
+	height: 30px;
+	width: 100%;
+}
+
+.fin_type_grid .ft_cattle_last {
+	grid-area: 10/1/11/3;
+}
+
+.jumbotron {
+	display: grid;
+	gap: 30px;
+	grid-template-columns: 1fr 1fr;
+}
+
+.calc_el {
+	width: 100%;
+}
+
+.calc_el table {
+	margin: 10px 0 0 0;
+	width: 100%;
+}
+
+.calc_el tbody {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+
+.calc_el tr {
+	display: flex;
+	justify-content: space-between;
+}
+
+.calc_select_cont {
+	display: flex;
+	gap: 10px;
+}
+
+.calc_input_cont {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 10px;
+}
+
+.calc_input_el {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.close {
+	width: 29px;
+	border-radius: 8px;
+	height: 29px;
+	background-color: #be252a;
+	color: white;
+	border: 0;
+	transition: 0.2s;
+	border: 1px solid transparent;
+}
+
+.close:hover,
+.close:active {
+	border: 1px solid #be252a;
+	background-color: transparent;
+	color: #2e2e2ecc;
+}
+
+#errorCalculatorForm {
+	grid-area: 2/1/3/3;
+}
+
+@media (max-width: 952px) {
+	#finType {
+		padding: 80px 0 0 0;
+	}
+
+	#finType h2 {
+		margin: 0 0 22px 0;
+	}
+	.fin_type_grid {
+		grid-template-columns: 1fr;
+	}
+
+	.fin_type_grid .ft_grid_last,
+	.fin_type_grid .ft_leasing_last,
+	.fin_type_grid .ft_cattle_last,
+	.ft_calc,
+	#errorCalculatorForm {
+		grid-area: unset;
+	}
+
+	.jumbotron {
+		grid-template-columns: 1fr;
+	}
+
+	.calc_input_cont {
+		flex-direction: column;
+		align-items: start;
+	}
+
+	.calc_input_el {
+		flex-direction: row-reverse;
+	}
+}
+
+.error_btn {
+	background-color: #396939;
+	border: 1px solid transparent;
+	padding: 15px 30px;
+	color: white;
+	border-radius: 6px;
+	font-size: 13px;
+	transition: 0.2s;
+	margin: 10px 0;
+}
+
+.error_btn:hover, 
+.error_btn:active {
+	border: 1px solid #396939;
+	color: #ffffff;
+	background-color: #396939AA;
 }
